# cpp-webview

./: .gitignore  CMakeLists.txt  README.md
embedded/saucer/embedded/: all.hpp
embedded/saucer/embedded/files/: index.html.cpp  index.html.hpp  index_html.h.cpp  index_html.h.hpp  vite.svg.cpp  vite.svg.hpp
embedded/saucer/embedded/files/assets/: index-C1G2lOS_.js.cpp  index-C1G2lOS_.js.hpp  index-DKUtWA6L.js.cpp  index-DKUtWA6L.js.hpp  index-DfkIRxrr.js.cpp  index-DfkIRxrr.js.hpp  index-rHqIm-nj.js.cpp  index-rHqIm-nj.js.hpp
resources/: AppIcon.icns
src/: main.cpp  menu.h  menu_mac.mm
ui/: package.json  pnpm-lock.yaml  postbuild.js  vite.config.ts
ui/src/: App.jsx
